Added Background Image to form

--- a/templates/admin/pages.create.html.twig
+++ b/templates/admin/pages.create.html.twig
@@ -31,6 +31,8 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#" data-target="#panoramic_image_container">Add Panoramic
                                 Image</a>
+                            <a class="dropdown-item" href="#" data-target="#background_image_container">Add Background
+                                Image</a>
                         </div>
                     </li>
                     <li class="nav-item" id="subnav--prev">
@@ -127,6 +129,13 @@
 
                         </div>
                     {%- endblock -%}
+                    {%- block BackgroundImage_widget -%}
+                        <div style="display: none" id="background_image_container" data-counter="{{ current_index }}"
+                             data-template="{{ '<div class="background_image" data-counter="#NEWCOUNTER#">#FORMELEMENTS#</div>'|e }}">
+                            {{ form_label(template.background_image) }}
+                            {{ form_widget(template.background_image) }}
+                        </div>
+                    {%- endblock -%}
                 </div>
             </div>
         </div>
@@ -165,6 +174,8 @@
                 $('#form-core-options').find('input,select').attr('disabled', true);
                 $('#subnav--core>a').removeClass('active').addClass('disabled');
                 $('#subnav--opts>a').removeClass('disabled').addClass('active');
+
+                $('#page_page_stage').val('options');
 
             }
 
@@ -205,22 +216,24 @@
                     $('div.jumbotron>div[data-counter]').data('counter', counter);
 
 
-                    $('.panoramic_image .card-deck .card .btn').on('click', function (e) {
-                        applyPanoClick($(this));
+                    $('.panoramic_image .card-deck .card .btn,.background_image .card-deck .card .btn').on('click', function (e) {
+                        applyCardClick($(this));
                     });
 
                     applyPanoSelected();
+                    applyBackgroundImageSelected();
 
                 } else {
                     console.log('** No Matching Element **')
                 }
             });
 
-            $('.panoramic_image .card-deck .card .btn').on('click', function (e) {
-                applyPanoClick($(this));
+            $('.panoramic_image .card-deck .card .btn,.background_image .card-deck .card .btn').on('click', function (e) {
+                applyCardClick($(this));
             });
 
             applyPanoSelected();
+            applyBackgroundImageSelected();
         });
 
         $('#form-opt-options>div').each(function () {
@@ -267,7 +280,7 @@
             return $(h).html();
         }
 
-        function applyPanoClick(ele) {
+        function applyCardClick(ele) {
             $(ele).closest('.card-deck').find(':radio').removeAttr('checked');
             $(ele).closest('.card-deck').find('label').removeClass('active');
             $(ele).closest('.card-deck').find('.card').removeClass('border-success');
@@ -277,6 +290,12 @@
             if ($(ele).closest('.card').find(':radio:checked').length) {
                 $(ele).closest('.panoramic_image').find('select').val($(ele).closest('.card').find(':radio:checked').val());
             }
+        }
+
+        function applyBackgroundImageSelected() {
+            $('.background_image :input[id^="page_background_image"]').each(function (e) {
+                $(this).closest('.background_image').find(':radio[value="' + $(this).val() + '"]').trigger('click');
+            });
         }
 
         function applyPanoSelected() {
