Added js to load page once selected

--- a/templates/admin/form-widgets/list_group.html.twig
+++ b/templates/admin/form-widgets/list_group.html.twig
@@ -4,6 +4,8 @@
         {{ form_widget(form.list_group[counter]) }}
         {{ form_errors(form.list_group[counter]) }}
     </div>
-    <small id="list_group_helper" class="form-text text-muted">Separate items with a comma (,). Wrap items in double-quotes (&quot;) if you require an items to include a comma.</small>
+    <small id="list_group_helper" class="form-text text-muted">Separate items with a comma (,). Wrap items in
+        double-quotes (&quot;) if you require an items to include a comma.
+    </small>
     <div class="invisible card card-body" id="js--text_leading_preview"></div>
 </div>
