--- a/templates/admin/pages.create.html.twig
+++ b/templates/admin/pages.create.html.twig
@@ -168,15 +168,7 @@
         $(document).ready(function () {
             if ($('#page_page_route').val() && !$('#page_page_route').hasClass('is-invalid')
                 && $('#page_page_type').val() && !$('#page_page_type').hasClass('is-invalid')) {
-                $('#page_page_route').attr('disabled', true);
-                $('#page_page_type').attr('disabled', true);
-
-                $('#form-core-options').find('input,select').attr('disabled', true);
-                $('#subnav--core>a').removeClass('active').addClass('disabled');
-                $('#subnav--opts>a').removeClass('disabled').addClass('active');
-
-                $('#page_page_stage').val('options');
-
+                lockPage();
             }
 
             $('#page_submit').on('click', function (e) {
@@ -189,43 +181,37 @@
 
             });
 
+            $('#page_page_route').on('change', function(e) {
+                var s = $(this).val();
+
+                var route = "{{ path('admin-page-data')|escape('js') }}"
+                $.post(route + '/' + s, {}, function(d) {
+                    $('#page_page_type').val(d.page_type);
+                    lockPage();
+
+                    $.each(d.display_order, function (field, value) {
+                        if (value > 0) {
+                            var f = field.split("--")[0];
+                            addElementToForm('#' + f + '_container');
+                            if (typeof d[f] !== 'undefined' && d[f].hasOwnProperty(value) && typeof d[f][value] === 'string') {
+                                $('#page_' + f + '_' + value).val(d[f][value]);
+                            } else {
+                                $.each(d[f], function(a, b) {
+                                    $('#page_' + a + '_' + value).val(b[value]);
+                                });
+                            }
+                        }
+                    });
+                }, 'json');
+
+            });
+
             $('#subnav--opts').on('click', '.dropdown-item', function (e) {
                 e.preventDefault();
 
                 var ele = $(this);
 
-                var fields = jQuery(jQuery(this).data('target'));
-                if (fields.length > 0) {
-                    // Try to find the counter of the list
-                    var counter = fields.data('counter');
-
-                    var newWidget = fields.find('*[data-prototype]');
-                    var htmlStr = '';
-
-                    $.each(newWidget, function (a, b) {
-                        htmlStr += getElementHtml(fields, b, counter);
-                    });
-
-                    var newElem = jQuery(fields.data('template').replace('#FORMELEMENTS#', htmlStr).replace('#NEWCOUNTER#', counter));
-                    $('#form-opt-options').append(newElem.css('display', 'block'));
-                    $.each(newWidget, function (a, b) {
-                        $('#form-opt-options').before(jQuery('#page_display_order').data('prototype').toString().replace(/__name__/g, $(b).prop('id').replace(/^page_/, '') + '--' + counter).replace('#NEWCOUNTER#', $('#form-opt-options>div').length));
-                    });
-
-                    counter++;
-                    $('div.jumbotron>div[data-counter]').data('counter', counter);
-
-
-                    $('.panoramic_image .card-deck .card .btn,.background_image .card-deck .card .btn').on('click', function (e) {
-                        applyCardClick($(this));
-                    });
-
-                    applyPanoSelected();
-                    applyBackgroundImageSelected();
-
-                } else {
-                    console.log('** No Matching Element **')
-                }
+               addElementToForm(jQuery(this).data('target'));
             });
 
             $('.panoramic_image .card-deck .card .btn,.background_image .card-deck .card .btn').on('click', function (e) {
@@ -249,6 +235,66 @@
                 hideElement($(this), target.data('form-element-hide'));
             }
         });
+
+        /**
+         * Lock Core options and allow the adition of options
+         */
+        function lockPage() {
+            $('#page_page_route').attr('disabled', true);
+            $('#page_page_type').attr('disabled', true);
+
+            $('#form-core-options').find('input,select').attr('disabled', true);
+            $('#subnav--core>a').removeClass('active').addClass('disabled');
+            $('#subnav--opts>a').removeClass('disabled').addClass('active');
+
+            $('#page_page_stage').val('options');
+
+        }
+
+        /**
+         * Add Element To Form
+         * @param t Jquery selector for template
+         * @returns {*}
+         */
+        function addElementToForm(t) {
+            var fields = jQuery(t);
+            console.log(t);
+            if (fields.length > 0) {
+
+                // Try to find the counter of the list
+                var counter = fields.data('counter');
+
+                var newWidget = fields.find('*[data-prototype]');
+                var htmlStr = '';
+
+                $.each(newWidget, function (a, b) {
+                    htmlStr += getElementHtml(fields, b, counter);
+                });
+
+                var newElem = jQuery(fields.data('template').replace('#FORMELEMENTS#', htmlStr).replace('#NEWCOUNTER#', counter));
+                $('#form-opt-options').append(newElem.css('display', 'block'));
+                $.each(newWidget, function (a, b) {
+                    $('#form-opt-options').before(jQuery('#page_display_order').data('prototype').toString().replace(/__name__/g, $(b).prop('id').replace(/^page_/, '') + '--' + counter).replace('#NEWCOUNTER#', $('#form-opt-options>div').length));
+                });
+
+                counter++;
+                $('div.jumbotron>div[data-counter]').data('counter', counter);
+
+
+                $('.panoramic_image .card-deck .card .btn,.background_image .card-deck .card .btn').on('click', function (e) {
+                    applyCardClick($(this));
+                });
+
+                applyPanoSelected();
+                applyBackgroundImageSelected();
+
+                return newElem;
+
+            } else {
+                console.log('** No Matching Element **')
+            }
+        }
+
 
         function getElementHtml(fields, b, counter) {
             var h = $('<body>');
