--- a/templates/admin/pages.create.html.twig
+++ b/templates/admin/pages.create.html.twig
@@ -141,6 +141,24 @@
         </div>
     </div>
 
+    <div id="modal" class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">This page is Unpublished</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>This version has possible changes which have not yet been published.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     {% if (dev_mode == 'true') %}
         <div class="container">
             <div class="row">
@@ -184,9 +202,15 @@
             $('#page_page_route').on('change', function(e) {
                 var s = $(this).val();
 
-                var route = "{{ path('admin-page-data')|escape('js') }}"
+                var route = "{{ path('admin-page-data')|escape('js') }}";
                 $.post(route + '/' + s, {}, function(d) {
                     $('#page_page_type').val(d.page_type);
+
+                    if (d.page_preview) {
+                        $('#modal').modal();
+                        prependHtml($('div.jumbotron'), '<p class="text-right"><strong>UNPUBLISHED<\/script><\/p>');
+
+                    }
                     lockPage();
 
                     $.each(d.display_order, function (field, value) {
