Renamed field from css to size to allow multiple css classes

--- a/templates/admin/form-widgets/text_heading.html.twig
+++ b/templates/admin/form-widgets/text_heading.html.twig
@@ -7,9 +7,9 @@
         </div>
 
         <div class="col">
-            {{ form_label(form.text_heading_css_class[counter]) }}
-            {{ form_widget(form.text_heading_css_class[counter]) }}
-            {{ form_errors(form.text_heading_css_class[counter]) }}
+            {{ form_label(form.text_heading_size_class[counter]) }}
+            {{ form_widget(form.text_heading_size_class[counter]) }}
+            {{ form_errors(form.text_heading_size_class[counter]) }}
         </div>
 
         <div class="col">
