--- a/templates/admin/pages.create.html.twig
+++ b/templates/admin/pages.create.html.twig
@@ -87,7 +87,7 @@
                              data-template="{{ '<div class="text_heading_type" data-counter="#NEWCOUNTER#"><div class="form-row">#FORMELEMENTS#</div><div class="invisible card card-body" id="js--text_heading_preview"></div>'|e }}">
                             <div class="form-row">
                                 {{ form_widget(template.text_heading_type) }}
-                                {{ form_widget(template.text_heading_css_class) }}
+                                {{ form_widget(template.text_heading_size_class) }}
                                 {{ form_widget(template.text_heading_text_value) }}
                             </div>
                             <div class="invisible card card-body" id="js--text_heading_preview">
