Added ability to add colours to headings

--- a/templates/admin/form-widgets/text_heading.html.twig
+++ b/templates/admin/form-widgets/text_heading.html.twig
@@ -13,6 +13,12 @@
         </div>
 
         <div class="col">
+            {{ form_label(form.text_heading_colour_class[counter]) }}
+            {{ form_widget(form.text_heading_colour_class[counter]) }}
+            {{ form_errors(form.text_heading_colour_class[counter]) }}
+        </div>
+
+        <div class="col">
             {{ form_label(form.text_heading_text_value[counter]) }}
             {{ form_widget(form.text_heading_text_value[counter]) }}
             {{ form_errors(form.text_heading_text_value[counter]) }}
