--- a/templates/admin/pages.create.html.twig
+++ b/templates/admin/pages.create.html.twig
@@ -88,6 +88,7 @@
                             <div class="form-row">
                                 {{ form_widget(template.text_heading_type) }}
                                 {{ form_widget(template.text_heading_size_class) }}
+                                {{ form_widget(template.text_heading_colour_class) }}
                                 {{ form_widget(template.text_heading_text_value) }}
                             </div>
                             <div class="invisible card card-body" id="js--text_heading_preview">
