Refactored pages and allowed forms/carusel to be added to pages in specific placement

--- a/templates/admin/form-widgets/text_heading.html.twig
+++ b/templates/admin/form-widgets/text_heading.html.twig
@@ -1,30 +1,30 @@
 <div class="text_heading_type" data-counter="{{ index }}">
     <div class="form-row">
-        <div class="col">
+        <div class="col-lg-4 col-md-6 col-sm-12">
             {{ form_label(form.text_heading_type[counter]) }}
             {{ form_widget(form.text_heading_type[counter]) }}
             {{ form_errors(form.text_heading_type[counter]) }}
         </div>
 
-        <div class="col">
+        <div class="col-lg-4 col-md-6 col-sm-12">
             {{ form_label(form.text_heading_size_class[counter]) }}
             {{ form_widget(form.text_heading_size_class[counter]) }}
             {{ form_errors(form.text_heading_size_class[counter]) }}
         </div>
 
-        <div class="col">
+        <div class="col-lg-4 col-md-6 col-sm-12">
             {{ form_label(form.text_heading_colour_class[counter]) }}
             {{ form_widget(form.text_heading_colour_class[counter]) }}
             {{ form_errors(form.text_heading_colour_class[counter]) }}
         </div>
 
-        <div class="col">
+        <div class="col-lg-4 col-md-6 col-sm-12">
             {{ form_label(form.text_heading_align_class[counter]) }}
             {{ form_widget(form.text_heading_align_class[counter]) }}
             {{ form_errors(form.text_heading_align_class[counter]) }}
         </div>
 
-        <div class="col">
+        <div class="col-lg-4 col-md-6 col-sm-12">
             {{ form_label(form.text_heading_text_value[counter]) }}
             {{ form_widget(form.text_heading_text_value[counter]) }}
             {{ form_errors(form.text_heading_text_value[counter]) }}
