--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
         <div class="row justify-content-center bg-white">
             <div class="alert alert-info text-center d-block mt-3" role="alert">
                 <h4 class="alert-heading">Publish this page?</h4>
-                {{ form_start(preview_mode_form, {'attr': {'class': 'form'}, 'action': path('admin-progress-revision')}) }}
+                {{ form_start(preview_mode_form, {'attr': {'class': 'form', 'action': path('admin-progress-revision')}}) }}
                 <div class="form-row">
                     <div class="col">
                         {{ form_widget(preview_mode_form.approve) }}
