--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -34,8 +34,7 @@
             <li class="nav-item dropdown{% if selectedNav is defined and selectedNav == 'admin-pages' %} active{% endif %}">
                 <a href="#" class="nav-link dropdown-toggle" id="navbarPagesDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                 <div class="dropdown-menu" aria-labelledby="navbarPagesDropdownMenuLink">
-                    <a class="dropdown-item" href="{{ path('admin-pages-create') }}"><span class="oi oi-plus" title="icon name" aria-hidden="true"></span> Create New Page</a>
-                    <a class="dropdown-item"><span class="oi oi-cog" title="icon name" aria-hidden="true"></span> Settings</a>
+                    <a class="dropdown-item" href="{{ path('admin-pages-create') }}"><span class="oi oi-plus" title="icon name" aria-hidden="true"></span> Manage Pages</a>
                 </div>
             </li>
         </ul>
